--- a/projectd/requirements.txt
+++ b/projectd/requirements.txt
@@ -1,8 +1,17 @@
+ajax==3.0.0
+blinker==1.4
 Click==7.0
+decorator==4.3.0
+django-appconf==1.0.2
 Flask==1.0.2
+Flask-JSON==0.3.3
+Flask-Mail==0.9.1
 Flask-MySQLdb==0.2.0
+Flask-Uploads==0.2.1
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.0
 mysqlclient==1.3.12
+passlib==1.7.1
 Werkzeug==0.14.1
+WTForms==2.2.1
